@@ -1,1 +1,2 @@
+US0378331005;Apple Computer, Inc.;;AAPL
 USM8791A1099;ON TRACK INNOV.;;OTIV
